--- a/.github/workflows/docker-to-docker-hub.yml
+++ b/.github/workflows/docker-to-docker-hub.yml
@@ -36,7 +36,7 @@ jobs:
         id: docker_build_moodtracker_frontend
         uses: docker/build-push-action@v2
         with:
-          context: ./frontend
+          context: ./frontend/
           file: ./Dockerfile
           platforms: linux/amd64
           builder: ${{ steps.buildx.outputs.name }}
@@ -49,7 +49,7 @@ jobs:
         id: docker_build_bb_fpm
         uses: docker/build-push-action@v2
         with:
-          context: ./server
+          context: ./server/
           file: ./Dockerfile
           platforms: linux/amd64
           builder: ${{ steps.buildx.outputs.name }}
